
- QSqlQueryModel::indexInQuery() is now virtual. See note below under QtSql.

- QSqlDriver::subscribeToNotification, unsubscribeFromNotification,
  subscribedToNotifications, isIdentifierEscaped, and stripDelimiters
  are now virtual. See note below under QtSql.

- qMacVersion() has been removed. Use QSysInfo::macVersion() or
  QSysInfo::MacintoshVersion instead.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models
  should now also connect to (and disconnect from) the rowsAboutToBeMoved and
  rowsMoved signals.

* The default value of the property QSortFilterProxyModel::dynamicSortFilter was
  changed from false to true.

* The signature of the virtual QAbstractItemView::dataChanged method has changed to
  include the roles which have changed. The signature is consistent with the dataChanged
  signal in the model.

* QFileSystemWatcher is now able to return failure in case of errors whilst